<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_new_tab" android:title="@string/new_tab" />
    <item android:id="@+id/action_new_session" android:title="@string/new_session" />
    <item android:id="@+id/action_reopen_closed" android:title="@string/reopen_closed" />
    <item android:id="@+id/action_desktop" android:checkable="true" android:title="@string/desktop_site" />
    <item android:id="@+id/action_site_permissions" android:title="@string/site_permissions" />
    <item android:id="@+id/action_share" android:title="@string/share" />
    <item android:id="@+id/action_open_external" android:title="@string/open_external" />
    <item android:id="@+id/action_bookmark" android:title="@string/add_remove_bookmark" />
    <item android:id="@+id/action_bookmarks" android:title="@string/bookmarks" />
    <item android:id="@+id/action_history" android:title="@string/history" />
    <item android:id="@+id/action_downloads" android:title="@string/downloads" />
    <item android:id="@+id/action_projects" android:title="@string/local_projects" />
    <item android:id="@+id/action_clear_site_data" android:title="@string/clear_site_data" />
    <item android:id="@+id/action_settings" android:title="@string/settings" />
</menu>
